--- a/Samples/Dependency Injection/00 seed/package.json
+++ b/Samples/Dependency Injection/00 seed/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@angular/core": "^4.1.0",
+    "@angular/router": "^4.1.0",
     "build-utils": "^1.0.39",
     "http-server": "^0.9.0",
     "reflect-metadata": "^0.1.10",
