--- a/Samples/Routing/00 seed/package.json
+++ b/Samples/Routing/00 seed/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "^4.1.1",
     "@angular/platform-browser-dynamic": "^4.1.1",
     "@angular/router": "^4.1.1",
+    "@types/node": "^7.0.18",
     "build-utils": "^1.0.39",
     "express": "^4.15.2",
     "http-server": "^0.9.0",
