--- a/Samples/Routing/00 seed/tsconfig.json
+++ b/Samples/Routing/00 seed/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd' or 'es2015'. */
     "lib": ["dom", "es2015"],
-    "strict": true,                            /* Enable all strict type-checking options. */
     "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "experimentalDecorators": true        /* Enables experimental support for ES7 decorators. */
   },
   "include": [
     "app/main.ts",
-    "build/main.ts"
+    "build/main.ts",
+    "server/main.ts"
   ]
 }
