--- a/Samples/package.json
+++ b/Samples/package.json
@@ -9,6 +9,7 @@
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/router": "^4.1.0",
     "express": "^4.15.3",
+    "mobx": "^3.1.11",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.3.0",
     "systemjs": "^0.20.12",
